--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <body class="antialiased">
     <div id="root"></div>
 
-    <script type="text/babel">
+    <script>
     const { useState, useEffect, useRef } = React;
     const h = React.createElement;
 
